--- a/main.html
+++ b/main.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<style type="text/css"> 
-			body {margin: 30px;} 
-		</style>  
-		<meta charset=utf-8 /> 
-		<title>Remove items from a dropdown list</title>
-	</head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Remove Color from Dropdown</title>
+</head>
+<body>
 
-	<body>
-		<form> 
-			<select id="colorSelect"> 
-				<option>Red</option> 
-				<option>Green</option> 
-				<option>White</option> 
-				<option>Black</option> 
-			</select> 
-			<input type="button" value="Select and Remove"> 
-		</form>
+    <select id="colorSelect">
+        <option value="Red">Red</option>
+        <option value="Green">Green</option>
+        <option value="White">White</option>
+        <option value="Black">Black</option>
+    </select>
+    
+    <input type="button" value="Select and Remove" onclick="removeSelectedColor()">
 
-		<script type="text/javascript" src="./script.js">
-		</script>
+    <script>
+        function removeSelectedColor() {
+            let select = document.getElementById("colorSelect");
+            let selectedIndex = select.selectedIndex;
+            
+            if (selectedIndex !== -1) {
+                select.remove(selectedIndex);
+            }
+        }
+    </script>
 
-	</body>
-
+</body>
 </html>
