--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
             let select = document.getElementById("colorSelect");
             let selectedIndex = select.selectedIndex;
             
-            if (selectedIndex !== -1) {
+            if (selectedIndex !== -1) { // Ensure an option is selected
                 select.remove(selectedIndex);
             }
         }
